# models/channelMember.go
@@ -1,38 +1,38 @@
 package models
 
 import (
+	"encoding/json"
 	"github.com/astaxie/beego/orm"
 	"strings"
-	"encoding/json"
 )
 
 type ChannelMember struct {
-	Id           string    `orm:"pk"`
-	ChannelId    string    `orm:"null"`
-	UserId       string    `orm:"null"`
-	Roles        string    `orm:"null"`
-	LastViewedAt int64     `orm:"null"`
-	MsgCount     int64     `orm:"null"`
-	MentionCount int64     `orm:"null"`
-	LastUpdateAt int64     `orm:"null"`
-	IsDelete     bool      `orm:"null"`
+	Id           string `orm:"pk" json:"id"`
+	ChannelId    string `orm:"null" json:"channel_id"`
+	UserId       string `orm:"null" json:"user_id"`
+	Roles        string `orm:"null" json:"roles"`
+	LastViewedAt int64  `orm:"null" json:"last_viewed_at"`
+	MsgCount     int64  `orm:"null" json:"msg_count"`
+	MentionCount int64  `orm:"null" json:"mention_count"`
+	LastUpdateAt int64  `orm:"null" json:"last_update_at"`
+	IsDelete     bool   `orm:"null" json:"is_delete"`
 }
 
 func init() {
-    orm.RegisterModel(new(ChannelMember))
+	orm.RegisterModel(new(ChannelMember))
 }
 
 // 多字段唯一键
 func (o *ChannelMember) TableUnique() [][]string {
-    return [][]string{
-        []string{"ChannelId", "UserId"},
-    }
+	return [][]string{
+		[]string{"ChannelId", "UserId"},
+	}
 }
 
 func (o *ChannelMember) PreSave() {
 	if o.Id == "" {
 		o.Id = NewId()
-	}	
+	}
 	o.LastUpdateAt = GetMillis()
 }
 
@@ -53,11 +53,11 @@ func (o *ChannelMember) GetRoles() []string {
 func GetChannelMember(channelId string, userId string) (*ChannelMember, error) {
 	var member ChannelMember
 	o := orm.NewOrm()
-	_, err := o.Raw("SELECT * FROM ChannelMembers WHERE ChannelId = :ChannelId AND UserId = ?", 
+	_, err := o.Raw("SELECT * FROM ChannelMembers WHERE ChannelId = :ChannelId AND UserId = ?",
 		userId).QueryRows(&member)
 	if err != nil {
-    	return &member, err
-	}	
+		return &member, err
+	}
 
-	return  &member, nil
-}			
+	return &member, nil
+}
